# foodiumpythonbackendapi

./: .dockerignore  .gitattributes  .gitignore  Docker-compose.yml  Dockerfile  README.md  main.py  pyproject.toml  tester.py  uv.lock - Shortcut.lnk
.github/workflows/: publish-workflow.yml
ML_and_Data_Science/: food_recommendation.py  glovo_pricing.py  nutrient_values.py
datasets/: Final_combined_KenyanRecipes.csv  final_Kenyan_recipes.csv  parsed_ingredients_kenyan_recipes.csv
datasets/ML Models/Ingredients_embeddings/: kenyan_embeddings.npy  matched_Kenyan_embeddings.npy  new_sample_embeddings.npy  sample_embeddings.npy  smaller_sample_embeddings.npy
datasets/ML Models/TFIDF/: kenyan_tfidf_vectorizer.pkl  new_sample_vectorizer.pkl  tfidf_vectorizer.pkl
datasets/ML Models/Word2VecModel/worldwide/: model_cbow3.bin.syn1neg.npy  model_cbow3.bin.wv.vectors.npy
datasets/ML Models/model-best-nlp-ner/model-best/: config.cfg  meta.json
datasets/ML Models/model-best-nlp-ner/model-best/ner/: model  moves
