[project]
name = "foodiumpythonbackend"
version = "0.1.0"
description = "Api to get recommendations and pricing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.11.11",
    "beautifulsoup4>=4.12.3",
    "fastapi[standard]>=0.115.6",
    "gensim>=4.3.3",
    "lxml>=5.3.0",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.1.4",
    "pymongo>=4.10.1",
    "redis>=5.2.1",
    "scikit-learn>=1.6.0",
    "scipy>=1.13.1",
    "spacy>=3.7.5",
    "textblob>=0.18.0.post0",
]
